--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "axios": "latest",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "latest",
+    "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
